syntax = "proto3";

package wallet.v1;

import "google/api/annotations.proto";

service WalletService {
  rpc MyWallet(MyWalletRequest) returns (MyWalletResponse) {
    option (google.api.http) = {get: "/api/v1/wallet/mywallet"};
  }
  rpc AddTransaction(AddTransactionRequest) returns (AddTransactionResponse);
}

message MyWalletRequest {
  string user_id = 1;
}

message MyWalletResponse {
  double balance = 2;
  repeated Transaction transactions = 3;
}

message AddTransactionRequest {
  string user_id = 1;
  double amount = 2;
  string description = 3;
}

message AddTransactionResponse {
  bool success = 1;
  string message = 2;
}

message Transaction {
  string id = 1;
  double amount = 2;
  string description = 3;
  uint64 timestamp = 4;
}
